--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,10 +12,15 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.CW_2">
         <activity
+            android:name=".SearchForActors"
+            android:exported="false" />
+        <activity
             android:name=".SearchForMovies"
+            android:configChanges="orientation|screenSize"
             android:exported="false" />
         <activity
             android:name=".MainActivity"
+            android:configChanges="orientation|screenSize"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
