--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,11 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.CW_2">
         <activity
+            android:name=".MovieResults"
+            android:exported="false" />
+        <activity
             android:name=".SearchForActors"
+            android:configChanges="orientation|screenSize"
             android:exported="false" />
         <activity
             android:name=".SearchForMovies"
